gcc/testsuite/gdc.test/runnable/imports/test10a.d
module imports.test10a;

void init()
{
    it[0] = 32;
}

int[1] it;

